# nero-cli

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
nero_cli/: __main__.py  cli.py
tests/: nero_test.py
